Добавляет адаптивные декоративные элементы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -454,7 +454,9 @@
 
     <section class="sub-products">
       <div class="sub-products__wrapper">
-        <h3 class="sub-products__title">Дополнительные товары</h3>
+        <h3 class="sub-products__title title-line">
+          <span>Дополнительные товары</span>
+        </h3>
 
         <ul class="sub-products__list sub-product-card">
 
@@ -536,7 +538,9 @@
 
     <section class="subscription">
       <div class="subscription__wrapper">
-        <h3 class="subscription__title">Акции и новинки</h3>
+        <h3 class="subscription__title title-line">
+          <span>Акции и новинки</span>
+        </h3>
         <b class="subscription__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</b>
         <form class="subscription__form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="subscription-email">Укажите ваш e-mail</label>
@@ -550,7 +554,7 @@
     <section class="location">
       <div class="location__wrapper">
 
-        <div class="location__address address">
+        <div class="location__address location__inner-adress address">
           <b class="address__title">Приглашаем<br> к сотрудничеству<br> дилеров!</b>
           <p class="address__text">ул. Большая<br>
             Конюшенная, д. 19/8<br>
