Добавляет главную навигацию по сайту

--- a/source/form.html
+++ b/source/form.html
@@ -37,18 +37,20 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
 
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--inner" href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--inner" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="main-nav__item main-nav__item-inner--current">
+              <a class="main-nav__link main-nav__link--inner" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
 
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--inner" href="index.html">Главная</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--inner" href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="main-nav__item main-nav__item--current">
-            <a class="main-nav__link main-nav__link--inner" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
       </nav>
     </div>
   </header>
@@ -132,7 +134,8 @@
                   <span class="control__name">E-mail:*</span>
                   <input class="control__input" type="email" name="mail" placeholder="kuklachev@gmail.com" required>
                   <svg class="control__icon-email" viewBox="0 0 18 14" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M.5 5.5v8h17v-8m-17-5h17v2l-8.5 6-8.5-6v-2Z" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M.5 5.5v8h17v-8m-17-5h17v2l-8.5 6-8.5-6v-2Z" stroke-linecap="round"
+                      stroke-linejoin="round" />
                   </svg>
                 </label>
               </li>
@@ -146,9 +149,11 @@
                   <span class="control__name">Телефон:*</span>
                   <input class="control__input" type="tel" name="phone" placeholder="8 (960) 900-60-90"
                     pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
-                    <svg class="control__icon-phone" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M7 8h8.5m0 0-2.5-2.5m2.5 2.5-2.5 2.5m-7.5-10v5h-3v5h3v5h-2.5c-1.5 0-2.5-1-2.5-2.5v-10c0-1.5 1-2.5 2.5-2.5h2.5Z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                  <svg class="control__icon-phone" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M7 8h8.5m0 0-2.5-2.5m2.5 2.5-2.5 2.5m-7.5-10v5h-3v5h3v5h-2.5c-1.5 0-2.5-1-2.5-2.5v-10c0-1.5 1-2.5 2.5-2.5h2.5Z"
+                      stroke="#000" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
                 </label>
             </ul>
           </fieldset>
