--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,18 +37,20 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
 
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--inner" href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__item main-nav__item-inner--current">
+              <a class="main-nav__link main-nav__link--inner" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--inner" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
 
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--inner" href="index.html">Главная</a>
-          </li>
-          <li class="main-nav__item main-nav__item--current">
-            <a class="main-nav__link main-nav__link--inner" href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--inner" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
       </nav>
     </div>
   </header>
